<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="370sp"
        android:layout_height="33sp"
        android:layout_marginTop="40sp"
        android:text="@string/altura"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="370sp"
        android:layout_height="53sp"
        android:autofillHints=""
        android:hint="@string/digite_sua_altura_em_metros"
        android:inputType="numberDecimal"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_altura" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/digite_seu_peso_em_kg"
        android:inputType="numberDecimal"
        android:textColorHint="#A1887F"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="verificarIMC"
        android:text="@string/verificar_imc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_peso"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/edit_peso"
        app:layout_constraintTop_toBottomOf="@+id/edit_peso" />

    <TextView
        android:id="@+id/text_diagnostico"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/diagnostico"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_imc" />

</androidx.constraintlayout.widget.ConstraintLayout>